<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".FrontPage"
    android:id="@+id/front"
    android:background="#55AA55">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textView"
        android:id="@+id/layout42">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:contentDescription="@string/app_name"
            android:baselineAlignBottom="false"
            android:src="@drawable/ic_launcher"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textSize="42sp"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/phrase"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/lookUpButton"
            android:id="@+id/button"
            android:onClick="switchToSearch"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".1"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="#55AA55" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/sellButton"
            android:id="@+id/button2"
            android:onClick="switchToSell"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".1"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="#55AA55" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/listingButton"
            android:id="@+id/button3"
            android:onClick="switchToListing"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".1"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="#55AA55" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/infoButton"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            android:onClick="switchToMyInformation"
            android:layout_weight=".1"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="#55AA55" />


    </LinearLayout>

</RelativeLayout>
